--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "cli": "^1.0.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
